# NyayaRAG

./: .env.example  .gitignore  NYAYARAG_EXECUTION_PLAYBOOK.md  NYAYARAG_MASTER_MEMORY.md  NYAYARAG_REVISED_EXECUTION_STRATEGY.md  NyayaRAG_Complete_Specification.docx  README.md  nyayarag_rag_architecture_deep_spec.txt  package.json  pnpm-lock.yaml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260316_0001_bootstrap_runtime_tables.py  20260317_0002_core_legal_models.py  (+9 more)
backend/app/: __init__.py  main.py
backend/tests/: test_agentic_workflow.py  test_answer_quality.py  test_appeal_chain_builder.py  test_appeal_validator.py  test_archetype_ingestion.py  test_auth_and_history.py  test_billing.py  test_case_context_builder.py  test_citation_graph_projection.py  test_citation_resolver.py  test_citation_routes.py  test_config.py  test_crag.py  test_criminal_code_mappings.py  test_database_foundation.py  test_embedding_pipeline.py  test_graph_rag.py  test_health.py  test_hybrid_rag.py  test_hyde.py  test_india_legal_evaluation.py  test_ingestion_adapters.py  test_legal_chunker.py  test_legal_models.py  test_lexical_retriever.py  test_logging.py  test_misgrounding.py  test_model_runtime.py  test_ocr_cleanup.py  test_placeholder_generator.py  test_provenance_models.py  test_qdrant_collection_manager.py  test_query_contracts.py  test_query_router.py  test_retrieval_benchmark.py  test_self_rag.py  test_structured_answer_builder.py  test_tasks.py  test_trust_dashboard.py  test_upload_ingestion.py  (+2 more)
(+139 files in other folders)
