[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyayarag-backend"
version = "0.1.0"
description = "FastAPI backend for NyayaRAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "celery[redis]>=5.5.0,<6.0.0",
  "fastapi>=0.115.12,<1.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "psycopg[binary]>=3.2.6,<4.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0"
]

[dependency-groups]
dev = [
  "alembic>=1.15.2,<2.0.0",
  "httpx>=0.28.1,<1.0.0",
  "mypy>=1.15.0,<2.0.0",
  "pytest>=8.3.5,<9.0.0",
  "ruff>=0.11.0,<1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true
